--- a/frontend/validity_application.html
+++ b/frontend/validity_application.html
@@ -6,38 +6,104 @@
     <title>Bus Pass Validity</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <style>
+        /* From Uiverse.io by SelfMadeSystem */ 
+/* The variation: the hexagonal lattice is rotated */
+.container {
+    width: 100%;
+    height: 100%;
+    --s: 6em;
+    --d: 0.3em;
+    --bg: #232228;
+    --fg: rgb(90, 92, 102);
+    background-color: var(--bg);
+    background-image: radial-gradient(
+        var(--d) var(--d) at var(--d) var(--d),
+        var(--fg) 100%,
+        transparent 100%
+      ),
+      radial-gradient(
+        var(--d) var(--d) at calc(var(--d) + 33.3%) var(--d),
+        var(--fg) 100%,
+        transparent 100%
+      ),
+      radial-gradient(
+        var(--d) var(--d) at calc(var(--d) + 50%) calc(var(--d) + 50%),
+        var(--fg) 100%,
+        transparent 100%
+      ),
+      radial-gradient(
+        var(--d) var(--d) at calc(var(--d) + 83.3%) calc(var(--d) + 50%),
+        var(--fg) 100%,
+        transparent 100%
+      );
+    background-size: var(--s) calc(var(--s) * 0.577350269);
+  }
+  /* From Uiverse.io by niat786 */ 
+button {
+    border: none;
+    color: #fff;
+    background-image: linear-gradient(30deg, #0400ff, #4ce3f7);
+    border-radius: 20px;
+    background-size: 100% auto;
+    font-family: inherit;
+    font-size: 17px;
+    padding: 0.6em 1.5em;
+   }
+   
+   button:hover {
+    background-position: right center;
+    background-size: 200% auto;
+    -webkit-animation: pulse 2s infinite;
+    animation: pulse512 1.5s infinite;
+   }
+   
+   @keyframes pulse512 {
+    0% {
+     box-shadow: 0 0 0 0 #05bada66;
+    }
+   
+    70% {
+     box-shadow: 0 0 0 10px rgb(218 103 68 / 0%);
+    }
+   
+    100% {
+     box-shadow: 0 0 0 0 rgb(218 103 68 / 0%);
+    }
+   }
+    </style>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen">
-    <div class="bg-white p-8 rounded-lg shadow-md max-w-3xl w-full">
-        <h2 class="text-2xl font-bold mb-6 text-center text-gray-800">Bus Pass with Validity</h2>
+<body class=" flex items-center justify-center min-h-screen container">
+    <div class="bg-white p-8 rounded-lg shadow-md max-w-3xl w-full" style="background-color: rgba(0, 0, 0, 0.484);">
+        <h2 class="text-2xl font-bold mb-6 text-center text-gray-800" style="color: white;">Bus Pass with Validity</h2>
         
         <div class="space-y-4" id="validityForm">
             <div>
-                <label class="block text-gray-700 text-sm font-bold mb-2">Name:</label>
-                <p id="name" class="text-gray-900 font-semibold"></p>
+                <label class="block text-gray-700 text-sm font-bold mb-2" style="color: white;">Name:</label>
+                <p id="name" class="text-gray-900 font-semibold" style="color: white;"></p>
             </div>
 
             <div>
-                <label class="block text-gray-700 text-sm font-bold mb-2">College Name:</label>
-                <p id="collegeName" class="text-gray-900 font-semibold"></p>
+                <label class="block text-gray-700 text-sm font-bold mb-2" style="color: white;">College Name:</label>
+                <p id="collegeName" class="text-gray-900 font-semibold" style="color: white;"></p>
             </div>
 
             <div>
-                <label class="block text-gray-700 text-sm font-bold mb-2">Starting Place:</label>
-                <p id="startPlace" class="text-gray-900 font-semibold"></p>
+                <label class="block text-gray-700 text-sm font-bold mb-2" style="color: white;">Starting Place:</label>
+                <p id="startPlace" class="text-gray-900 font-semibold" style="color: white;"></p>
             </div>
 
             <div>
-                <label class="block text-gray-700 text-sm font-bold mb-2">Ending Place:</label>
-                <p id="endPlace" class="text-gray-900 font-semibold"></p>
+                <label class="block text-gray-700 text-sm font-bold mb-2" style="color: white;">Ending Place:</label>
+                <p id="endPlace" class="text-gray-900 font-semibold" style="color: white;"></p>
             </div>
             <div>
-                <label class="block text-gray-700 text-sm font-bold mb-2">Renewal Amount:</label>
-                <p id="renewalAmount" class="text-gray-900 font-semibold"></p>
+                <label class="block text-gray-700 text-sm font-bold mb-2" style="color: white;">Renewal Amount:</label>
+                <p id="renewalAmount" class="text-gray-900 font-semibold" style="color: white;"></p>
             </div>
 
             <div>
-                <label class="block text-gray-700 text-sm font-bold mb-2">Validity:</label>
+                <label class="block text-gray-700 text-sm font-bold mb-2" style="color: white;">Validity:</label>
                 <p id="validity" class="text-green-600 font-semibold"></p>
             </div>
         </div>
